--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,42 @@
 name: LSA_env
 channels:
+  - conda-forge
   - defaults
 dependencies:
+  - appnope=0.1.4
+  - asttokens=3.0.0
   - blas=1.0
   - bottleneck=1.4.2
   - brotli-python=1.0.9
   - bzip2=1.0.8
-  - ca-certificates=2025.2.25
+  - ca-certificates=2025.1.31
+  - certifi=2025.1.31
+  - cffi=1.17.1
+  - charset-normalizer=3.4.1
+  - click=8.1.8
+  - colorama=0.4.6
+  - comm=0.2.2
   - contourpy=1.3.1
   - cycler=0.11.0
+  - debugpy=1.8.11
+  - decorator=5.2.1
+  - exceptiongroup=1.2.2
+  - executing=2.1.0
   - expat=2.6.4
   - fonttools=4.55.3
   - freetype=2.12.1
+  - h2=4.2.0
+  - hpack=4.1.0
+  - hyperframe=6.1.0
+  - idna=3.10
+  - importlib-metadata=8.6.1
+  - ipykernel=6.29.5
+  - ipython=8.32.0
+  - jedi=0.19.2
+  - joblib=1.4.2
   - jpeg=9e
+  - jupyter_client=8.6.3
+  - jupyter_core=5.7.2
   - kiwisolver=1.4.8
   - lcms2=2.16
   - lerc=4.0.0
@@ -24,37 +48,67 @@ dependencies:
   - libmpdec=4.0.0
   - libopenblas=0.3.21
   - libpng=1.6.39
+  - libsodium=1.0.18
   - libtiff=4.5.1
   - libwebp-base=1.3.2
   - llvm-openmp=14.0.6
   - lz4-c=1.9.4
   - matplotlib=3.10.0
   - matplotlib-base=3.10.0
+  - matplotlib-inline=0.1.7
   - ncurses=6.4
+  - nest-asyncio=1.6.0
+  - nltk=3.9.1
   - numexpr=2.10.1
   - numpy=2.2.2
   - numpy-base=2.2.2
   - openjpeg=2.5.2
-  - openssl=3.0.15
+  - openssl=3.4.1
   - packaging=24.2
   - pandas=2.2.3
+  - parso=0.8.4
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
   - pillow=11.1.0
   - pip=25.0
+  - platformdirs=4.3.6
+  - prompt-toolkit=3.0.50
+  - psutil=7.0.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
+  - pycparser=2.22
+  - pygments=2.19.1
   - pyparsing=3.2.0
+  - pysocks=1.7.1
   - python=3.13.2
   - python-dateutil=2.9.0post0
   - python-tzdata=2023.3
   - python_abi=3.13
   - pytz=2024.1
+  - pyzmq=26.2.0
   - readline=8.2
+  - regex=2024.11.6
+  - requests=2.32.3
+  - scikit-learn=1.6.1
+  - scipy=1.15.1
   - setuptools=72.1.0
   - six=1.16.0
   - sqlite=3.45.3
+  - stack_data=0.6.3
+  - threadpoolctl=3.5.0
   - tk=8.6.14
   - tornado=6.4.2
+  - tqdm=4.67.1
+  - traitlets=5.14.3
+  - typing_extensions=4.12.2
   - tzdata=2025a
+  - urllib3=2.3.0
+  - wcwidth=0.2.13
   - wheel=0.45.1
   - xz=5.6.4
+  - zeromq=4.3.5
+  - zipp=3.21.0
   - zlib=1.2.13
+  - zstandard=0.23.0
   - zstd=1.5.6
 prefix: /Users/sayantanchoudhury/opt/anaconda3/envs/LSA_env
